rm timer for community memebers

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<!-- UUID://7BB31A4A-9E10-48D9-A1CD-448A7E567A59// --><tw-storydata name="Do we take shelter?" startnode="20" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="7BB31A4A-9E10-48D9-A1CD-448A7E567A59" zoom="1" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Courier+Prime');
+	<!-- UUID://7BB31A4A-9E10-48D9-A1CD-448A7E567A59// --><tw-storydata name="Do we take shelter?" startnode="25" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="7BB31A4A-9E10-48D9-A1CD-448A7E567A59" zoom="1" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Courier+Prime');
 
 html,
 body {
@@ -4672,7 +4672,7 @@ p&gt;To answer these questions, evaluate the information you have and determine 
 &lt;&lt;timed 3s t8n&gt;&gt;
 &lt;p&gt;Evaluate the new information that you have to build your understanding of the impact and implications of the most recent bombings.&lt;/p&gt;
 
-&lt;&lt;timed 3s t8n&gt;&gt;
+&lt;&lt;next 2s&gt;&gt;
 &lt;p&gt;Determine the facts that you have about what has just happened in your city:&lt;/p&gt;
 
 &lt;ul&gt;
@@ -5076,7 +5076,7 @@ Select your household.
 &lt;&lt;/timed&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="SelectHousehold2" tags="" position="600,350" size="100,100">&lt;&lt;audio &quot;fire&quot; volume 0.75 fadeout&gt;&gt;
 &lt;h1 class=&quot;fade-text&quot; style=&quot;text-align:center;&quot;&gt;Round 2&lt;/h1&gt;
-Select your household.
+Select any of these households.
 
 [[Gamemaster&#39;s Clock|Gamemaster2]]
 
