--- a/index.html
+++ b/index.html
@@ -5151,8 +5151,7 @@ Select your household.
 &lt;p&gt;And community members are on the move, visiting households in your neighbourhood to share information.&lt;/p&gt;
 
 &lt;&lt;next&gt;&gt;
-&lt;p&gt;Everyone knows (or suspects) that Central Manchester is devastated– the Luftwaffe bombing raid has destroyed buildings, roads, and transportation infrastructure including railway lines.
-And everywhere, there is fire, fire, fire.&lt;/p&gt;
+&lt;p&gt;Everyone knows (or suspects) that Central Manchester is devastated– the Luftwaffe bombing raid has destroyed buildings, roads, and transportation infrastructure including railway lines.&lt;/p&gt;
 
 &lt;&lt;next 2s&gt;&gt;
 &lt;p&gt;And everywhere, there is @@color:orange;fire, fire, fire.@@&lt;/p&gt;
